--- a/index.html
+++ b/index.html
@@ -1,1 +1,141 @@
-hello!!
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="description" content="">
+	<meta name="author" content="">
+	<title>Simmys - github</title>
+	<!-- CSS -->
+	<link href="css/bootstrap.min.css" rel="stylesheet">
+	<link href="css/theme.css" rel="stylesheet">
+	<link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+	<link href="http://fonts.googleapis.com/css?family=Open+Sans:300,400,700,400italic,700italic" rel="stylesheet" type="text/css">
+	<link href="http://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
+</head>
+
+<body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
+<!-- Navigation -->
+<nav class="navbar navbar-custom navbar-fixed-top" role="navigation">
+<div class="container">
+	<div class="navbar-header">
+		<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-main-collapse">
+		<i class="fa fa-bars"></i>
+		</button>
+	</div>
+	<!-- Collect the nav links, forms, and other content for toggling -->
+	<div class="collapse navbar-collapse navbar-right navbar-main-collapse">
+		<ul class="nav navbar-nav">
+			<li>
+			<a href="index.html">Home</a>
+			</li>
+			<li>
+			<a href="#projects">Projects</a>
+			</li>
+			<li>
+			<a href="#about">About me</a>
+			</li>
+			<li>
+			<a href="#contact">Contacts</a>
+			</li>
+		</ul>
+	</div>
+	<!-- /.navbar-collapse -->
+</div>
+<!-- /.container -->
+</nav>
+<!-- Intro Header -->
+<header class="intro">
+<div class="intro-body">
+	<div class="container">
+		<div class="row">
+			<div class="col-md-8 col-md-offset-2">
+				<h1 class="brand-heading">Simmys</h1>
+				<p class="intro-text">
+					Computer Engineer
+				</p>
+				<a href="#about" class="btn btn-circle page-scroll">
+				<i class="fa fa-angle-double-down animated"></i>
+				</a>
+			</div>
+		</div>
+	</div>
+</div>
+</header>
+<!-- Projects Section -->
+<section id="projects">
+<div class="container content-section text-center">
+	<div class="row">
+		<h2>PROJECTS</h2>
+		<div class="col-lg-8 col-lg-offset-2">
+			<span class="fa fa-spinner fa-spin fa-2x">
+			</span>
+			<span>&nbsp; Work in progress</span>
+		</div>
+	</div>
+</div>
+</section>
+<hr>
+<section id="about">
+		<div class="container content-section text-center">
+			<div class="row">
+				<h2>ABOUT ME</h2>
+				<div class="col-lg-8 col-lg-offset-2">
+	
+						<span class="fa fa-spinner fa-spin fa-2x"></span>
+						<span>&nbsp; Work in progress</span>				
+					
+				</div>
+			</div>
+		</div>
+		</section>
+
+
+<hr>
+<section id="contact">
+<div class="container content-section text-center">
+	<div class="row">
+		<div class="col-lg-8 col-lg-offset-2">
+			<h2>CONTACTS</h2>
+			<p>
+				 
+			</p>
+			<ul class="list-inline banner-social-buttons">
+				<li>
+					<a href="https://github.com/Simmys" class="btn btnghost btn-lg"><i class="fa fa-github fa-fw fa-2x"></i></a>
+				</li>
+				<li>
+					<a href="https://facebook.com/simonetta.dallasta" class="btn btnghost btn-lg"><i class="fa fa-facebook fa-fw fa-2x"></i></a>
+				</li>
+				<li>
+					<a href="https://instagram.com/simmy.dll" class="btn btnghost btn-lg"><i class="fa fa-instagram fa-fw fa-2x"></i></a>
+				</li>
+				<li>
+					<a href="mailto:simonetta.dallasta@gmail.com" class="btn btnghost btn-lg"><i class="fa fa-envelope-o fa-fw fa-2x"></i></a>
+				</li>
+				<li>
+					<a href="https://www.linkedin.com/in/simonetta-dallasta" class="btn btnghost btn-lg"><i class="fa fa-linkedin fa-fw fa-2x"></i></a>
+				</li>
+			</ul>
+		</div>
+	</div>
+</div>
+</section>
+<!-- Footer -->
+<footer>
+	<div class="container">
+		<p class="credits">
+			Original Theme:<br/>
+			"Aries" Template by WowThemes.net
+		</p>
+	</div>
+</footer>
+<!-- Scripts -->
+<script src="js/jquery.js"></script>
+<script src="js/bootstrap.min.js"></script>
+<script src="js/jquery.easing.min.js"></script>
+<script src="js/theme.js"></script>
+</body>
+</html>
