--- a/404.html
+++ b/404.html
@@ -9,13 +9,15 @@
     <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href="http://fonts.googleapis.com/css?family=Open+Sans:300,400,700,400italic,700italic" rel="stylesheet" type="text/css">
     <link href="http://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
-  
     <link href="css/error.css" rel="stylesheet">
   </head>
+
   <body>
     <h1 class="glow">404</h1>
-    <h3>The page you are looking for does not exist</h3>
-    <h5>If it's important, maybe I'm already working on it</h5>
+    <div class="text">
+      <h3>The page you are looking for does not exist.</h3>
+      <h5>If it's important, maybe I'm already working on it.</h5>
+    </div>
     <div class="home">
       <a href="./index.html" class="btn-circle">
         <i class="fa fa-home"></i>
