--- a/index.html
+++ b/index.html
@@ -5,10 +5,9 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="">
-	<meta name="author" content="">
-	<title>Simmys - github</title>
-	<!-- CSS -->
+	
+	<title>Simmys</title>
+	
 	<link href="css/bootstrap.min.css" rel="stylesheet">
 	<link href="css/theme.css" rel="stylesheet">
 	<link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
@@ -17,7 +16,7 @@
 </head>
 
 <body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
-<!-- Navigation -->
+
 <nav class="navbar navbar-custom navbar-fixed-top" role="navigation">
 <div class="container">
 	<div class="navbar-header">
@@ -25,7 +24,7 @@
 		<i class="fa fa-bars"></i>
 		</button>
 	</div>
-	<!-- Collect the nav links, forms, and other content for toggling -->
+	
 	<div class="collapse navbar-collapse navbar-right navbar-main-collapse">
 		<ul class="nav navbar-nav">
 			<li>
@@ -42,9 +41,8 @@
 			</li>
 		</ul>
 	</div>
-	<!-- /.navbar-collapse -->
 </div>
-<!-- /.container -->
+
 </nav>
 <!-- Intro Header -->
 <header class="intro">
@@ -56,7 +54,7 @@
 				<p class="intro-text">
 					Computer Engineer
 				</p>
-				<a href="#about" class="btn btn-circle page-scroll">
+				<a href="#projects" class="btn btn-circle page-scroll">
 				<i class="fa fa-angle-double-down animated"></i>
 				</a>
 			</div>
